# PurchaseManager

./: .gitignore  CMakeLists.txt  Eldorado.cpp  Eldorado.h  HtmlParser.cpp  HtmlParser.h  Locality.cpp  Locality.h  MVideo.cpp  MVideo.h  ParsedInformation.cpp  ParsedInformation.h  Product.cpp  Product.h  ProductType.cpp  ProductType.h  ProductsUpdater.cpp  ProductsUpdater.h  PurchaseManager.cpp  PurchaseManager.h  PurchaseManager.qrc  PurchaseManager.sln  PurchaseManager.ui  PurchaseManager.vcxproj  PurchaseManager.vcxproj.filters  README.md  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  Shop.cpp  Shop.h  ShopsState.cpp  ShopsState.h  main.cpp  purchasemanager_en.qm  purchasemanager_en.ts  purchasemanager_ru.qm  purchasemanager_ru.ts
src/: Eldorado.cpp  HtmlParser.cpp  HtmlParser.h  Locality.cpp  MVideo.cpp  MVideo.h  Product.h  ProductType.cpp  ProductsUpdater.h  PurchaseManager.cpp  PurchaseManager.h  PurchaseManager.qrc  PurchaseManager.ui  Settings.h  SettingsDialog.cpp  Shop.h  ShopsState.cpp
translations/: purchasemanager_en.ts  purchasemanager_ru.ts
